# BE/swagger.json
@@ -168,6 +168,39 @@
                 }
             }
         },
+        "/article/all": {
+            "get": {
+                "tags": [
+                    "Article"
+                ],
+                "summary": "Get all articles",
+                "description": "Get all articles",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "articles": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/articleTitleandPic"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/article/{articleId}": {
             "get": {
                 "tags": [
@@ -317,6 +350,80 @@
                     }
                 }
             }
+        },
+        "/article/review/{articleId}": {
+            "put": {
+                "tags": [
+                    "Article"
+                ],
+                "summary": "Review article by id",
+                "description": "Review article by id",
+                "parameters": [
+                    {
+                        "name": "articleId",
+                        "in": "path",
+                        "description": "ID of article to return",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/example/articleId"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "isValidated": {
+                                        "type": "boolean",
+                                        "example": true
+                                    },
+                                    "reviewerId": {
+                                        "$ref": "#/components/example/reviewerId"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Article reviewed successfully"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorSchema400"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Article not found"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -339,6 +446,19 @@
                     "description": {
                         "type": "string",
                         "example": "Adelia Marista Safitri, lulusan dari Universitas Diponegoro dengan gelar Sarjana Kesehatan Masyarakat tahun 2017. Mengawali karir sebagai jurnalis dan penulis di beberapa media kesehatan. Saat ini bergabung di HonestDocs sebagai penulis dan editor dengan harapan dapat memberikan informasi kesehatan yang sederhana tapi berkualitas, tepercaya, dan mudah dipahami oleh seluruh masyarakat."
+                    }
+                }
+            },
+            "articleTitleandPic": {
+                "schema": "object",
+                "properties": {
+                    "title": {
+                        "type": "string",
+                        "example": "Tanda Tanda Vital (TTV): Pemeriksaan dan Nilai Normal"
+                    },
+                    "pictureUrl": {
+                        "type": "string",
+                        "example": "https://static.honestdocs.id/989x500/webp/system/blog_articles/main_hero_images/000/001/248/original/Tanda_Tanda_Vital_%28TTV%29_Pemeriksaan_dan_Nilai_Normal.jpg"
                     }
                 }
             },
